Added simple mapper functionality. Only for string inputs

--- a/mark1/m1.md
+++ b/mark1/m1.md
@@ -24,6 +24,8 @@ Mostly aimed at getting a hang of Go and spark syntax + eco system. This is gonn
 ### Imp sources
 * https://cs.stanford.edu/~matei/papers/2012/nsdi_spark.pdf
   * Make a facile implementation from here
+* https://people.csail.mit.edu/bzhou/publication/report_spark.pdf
+  * MIT CSAIL paper explaining the implementation
 
 ![alt text](../static/DisGoFuncs.png)
 
@@ -49,3 +51,7 @@ Mostly aimed at getting a hang of Go and spark syntax + eco system. This is gonn
 * [ ] reduce
 * [ ] lookup
 * [ ] save
+
+#### Logs
+
+* Dt. 27 oct: Instead of haphazarly looking here and there, I'll start by defining a data structure for my go-spark stuff
