Completed RDD mapper. Started writing a simple dataframe implementation

--- a/mark1/m1.md
+++ b/mark1/m1.md
@@ -31,7 +31,7 @@ Mostly aimed at getting a hang of Go and spark syntax + eco system. This is gonn
 
 #### Feature Map
 #### Transformations
-* [ ] map
+* [X] map
 * [ ] filter
 * [ ] flatMap
 * [ ] sample
